--- a/Source/Components/ImageGlass.Settings/packages.config
+++ b/Source/Components/ImageGlass.Settings/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="Magick.NET.Core" version="6.1.3" targetFramework="net48" />
   <package id="Magick.NET.SystemDrawing" version="2.0.14" targetFramework="net48" />
-  <package id="Magick.NET-Q16-OpenMP-x64" version="7.23.3" targetFramework="net48" />
+  <package id="Magick.NET-Q8-AnyCPU" version="7.23.3" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.Threading.Analyzers" version="16.9.60" targetFramework="net48" developmentDependency="true" />
 </packages>
