--- a/Source/Components/ImageGlass.UI/packages.config
+++ b/Source/Components/ImageGlass.UI/packages.config
@@ -3,6 +3,8 @@
   <package id="DotNetZip" version="1.15.0" targetFramework="net48" />
   <package id="Magick.NET.Core" version="6.1.3" targetFramework="net48" />
   <package id="Magick.NET.SystemDrawing" version="2.0.14" targetFramework="net48" />
-  <package id="Magick.NET-Q16-OpenMP-x64" version="7.23.3" targetFramework="net48" />
+  <package id="Magick.NET-Q8-AnyCPU" version="7.23.3" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.Threading.Analyzers" version="16.9.60" targetFramework="net48" developmentDependency="true" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net48" />
 </packages>
